tests/trybuild/entities/component_order.stderr
error[E0308]: mismatched types
 --> tests/trybuild/entities/component_order.rs:8:39
  |
8 |     let entities = entities!((A, B), (B, A));
  |                                       ^ expected struct `A`, found struct `B`

error[E0308]: mismatched types
 --> tests/trybuild/entities/component_order.rs:8:42
  |
8 |     let entities = entities!((A, B), (B, A));
  |                                          ^ expected struct `B`, found struct `A`
